--- a/src/sass/public2.scss
+++ b/src/sass/public2.scss
@@ -273,15 +273,21 @@ body,html{
                 color: #cbcacb;
             }
         }
-        h5{
+        .index-co{
             width: 300px;
             height: 50px;
             border-bottom: 1px solid #dfdfdf;
-            a{
-                margin-left: 252px;
-                font-size: 14px;
+            h5{
+                width: 300px;
+                height: 50px;
+                font-size: 16px;
                 line-height: 50px;
-                color: #31b3de;
+                color: skyblue;
+                a{
+                    font-size: 14px;
+                    line-height: 50px;
+                    color: #31b3de;
+                }
             }
         }
     }
