--- a/src/sass/goodsdetail.scss
+++ b/src/sass/goodsdetail.scss
@@ -124,7 +124,7 @@ body,html{
                     width: 600px;
                     height: 40px;
                     padding-left: 15px;
-                    ul{
+                    .t3{
                        li{ 
                         list-style: disc;
                         font-size: 14px;
